--- a/DuelWitch.vcxproj.filters
+++ b/DuelWitch.vcxproj.filters
@@ -363,6 +363,15 @@
     <ClCompile Include="Sources\Game\Scene\WinResultScene.cpp">
       <Filter>Game\Scene</Filter>
     </ClCompile>
+    <ClCompile Include="Sources\Game\Command\RenderCommand.cpp">
+      <Filter>Game\Command</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\Game\Effect\PlayerChargeEffectEmitter.cpp">
+      <Filter>Game\Effect\Emmiter</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\Game\Effect\PlayerChargeEffect.cpp">
+      <Filter>Game\Effect\Effect</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sources\pch\pch.h">
@@ -745,6 +754,12 @@
     </ClInclude>
     <ClInclude Include="Sources\Game\Scene\WinResultScene.h">
       <Filter>Game\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Sources\Game\Effect\PlayerChargeEffectEmitter.h">
+      <Filter>Game\Effect\Emmiter</Filter>
+    </ClInclude>
+    <ClInclude Include="Sources\Game\Effect\PlayerChargeEffect.h">
+      <Filter>Game\Effect\Effect</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
