--- a/DuelWitch.vcxproj
+++ b/DuelWitch.vcxproj
@@ -268,6 +268,7 @@
     <ClCompile Include="Sources\Parameters\ElementParameter.cpp" />
     <ClCompile Include="Sources\Parameters\FieldParameter.cpp" />
     <ClCompile Include="Sources\Parameters\MagicParameter.cpp" />
+    <ClCompile Include="Sources\Parameters\OptionParameter.cpp" />
     <ClCompile Include="Sources\pch\pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -389,6 +390,7 @@
     <ClInclude Include="Sources\Parameters\ElementParameter.h" />
     <ClInclude Include="Sources\Parameters\FieldParameter.h" />
     <ClInclude Include="Sources\Parameters\MagicParameter.h" />
+    <ClInclude Include="Sources\Parameters\OptionParameter.h" />
     <ClInclude Include="Sources\pch\pch.h" />
     <ClInclude Include="Sources\Utils\AudioManager.h" />
     <ClInclude Include="Sources\Utils\BinFile.h" />
@@ -458,6 +460,7 @@
     <None Include="Resources\Jsons\field.json" />
     <None Include="Resources\Jsons\magic.json" />
     <None Include="Resources\Jsons\player_command.json" />
+    <None Include="Resources\Jsons\play_option.json" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shaders\BillboardGS.hlsl">
