マウスモードを変更せずに、カーソルをウインドウ内に収めるように変更

--- a/DuelWitch.vcxproj
+++ b/DuelWitch.vcxproj
@@ -249,6 +249,7 @@
     <ClCompile Include="Sources\Game\Object\Transform.cpp" />
     <ClCompile Include="Sources\Game\Player\Player.cpp" />
     <ClCompile Include="Sources\Game\Player\PlayerManager.cpp" />
+    <ClCompile Include="Sources\Game\Scene\CharaManualScene.cpp" />
     <ClCompile Include="Sources\Game\Scene\CharaSelectScene.cpp" />
     <ClCompile Include="Sources\Game\Scene\LogoScene.cpp" />
     <ClCompile Include="Sources\Game\Scene\PauseScene.cpp" />
@@ -366,6 +367,7 @@
     <ClInclude Include="Sources\Game\Player\PlayerID.h" />
     <ClInclude Include="Sources\Game\Player\PlayerManager.h" />
     <ClInclude Include="Sources\Game\Player\PlayerStatus.h" />
+    <ClInclude Include="Sources\Game\Scene\CharaManualScene.h" />
     <ClInclude Include="Sources\Game\Scene\CharaSelectScene.h" />
     <ClInclude Include="Sources\Game\Scene\IScene.h" />
     <ClInclude Include="Sources\Game\Scene\ISceneRequest.h" />
