--- a/DuelWitch.vcxproj.filters
+++ b/DuelWitch.vcxproj.filters
@@ -414,6 +414,12 @@
     <ClCompile Include="Sources\Utils\MouseWrapper.cpp">
       <Filter>Utils\Input</Filter>
     </ClCompile>
+    <ClCompile Include="Sources\Game\Effect\EffectiveEffect.cpp">
+      <Filter>Game\Effect\Effect</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\Game\Effect\EffcetiveEffectEmitter.cpp">
+      <Filter>Game\Effect\Emmiter</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sources\pch\pch.h">
@@ -850,6 +856,12 @@
     </ClInclude>
     <ClInclude Include="Sources\Utils\MouseWrapper.h">
       <Filter>Utils\Input</Filter>
+    </ClInclude>
+    <ClInclude Include="Sources\Game\Effect\EffectiveEffect.h">
+      <Filter>Game\Effect\Effect</Filter>
+    </ClInclude>
+    <ClInclude Include="Sources\Game\Effect\EffectiveEffectEmitter.h">
+      <Filter>Game\Effect\Emmiter</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
